# nuthatch

./: .gitignore  CLAUDE.md  Cargo.toml  GOVERNANCE.md  README.md  deny.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
components/: large-transfers.wasm
components/large-transfers/: Cargo.toml
components/large-transfers/src/: lib.rs
docs/: backlog.md  exex-design.md  prod-readiness.md  progress-log.md
docs/grants/: ef-esp.md  nlnet.md
docs/rfcs/: 0006-grant-funding.md  0008-compliance-pack.md  0009-factory-and-dynamic-contract-discovery.md  0010-admin-ui-and-webhooks.md  0011-graph-network-nest-lodestar-migration.md  0012-multi-nest-runtime-and-nest-packaging.md  0013-storage-and-query-engine-direction.md  0018-what-a-nest-is-authored-logic-and-composable-nests.md  0024-eth-call-execution-engine.md  README.md
scripts/: try-nuthatch.sh
skills/nuthatch-builder/: SKILL.md  cli-reference.md  compliance.md  config-as-code.md  config-reference.md  troubleshooting.md  workflows.md
src/: abi.rs  alerts.rs  analytics.rs  bench.rs  blob.rs  chains.rs  check.rs  cli.rs  config.rs  decode.rs  exposure.rs  factory.rs  indexer.rs  labels.rs  lib.rs  main.rs  mcp.rs  progress.rs  project.rs  registry.rs  rpc.rs  seal.rs  semantic.rs  serve.rs  skill.rs  source.rs  starlark_config.rs  store.rs  transform.rs  webhooks.rs
tests/: e2e_crash_safety.rs  e2e_reorg.rs  e2e_roost_parity.rs  e2e_solo.rs  semantic_layer.rs  skill_refs.rs
tests/common/: mod.rs  tape.rs
wit/: transform.wit
